ConnectionStrings section is added.

--- a/OnlineExaminationWeb/appsettings.json
+++ b/OnlineExaminationWeb/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-TL5BT8Q\\SQLEXPRESS;Database=OnlineExaminationDb;Trusted_Connection=True;MultipleActiveResultsSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
