CustomKeys section is added to the appsettings.json file.

--- a/OnlineExaminationWeb/appsettings.json
+++ b/OnlineExaminationWeb/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CustomKeys": {
+    "BaseUrl": "http://localhost:39222"
+  }
   "AllowedHosts": "*"
 }
